# SonarLocalizationProject

./: .gitignore  01_Data_Export.ipynb  01_Sonar_Visualizer.ipynb  02_Ping360_Visualizer.ipynb  02_Video_Export.ipynb  02_Video_Export_Demo.ipynb  02_synchronized_sonar_net_distance_analysis.ipynb  03_Sonar_Visualizer.ipynb  03_pipeline_visualization.ipynb  03_rov_navigation_analysis.ipynb  03_synchronized_sonar_net_distance_analysis.ipynb  03_video_with_sonar_display.ipynb  04_Ping360_Visualizer.ipynb  04_image_analysis.ipynb  04_synchronized_sonar_net_distance_analysis.ipynb  04_video_with_sonar_display.ipynb  05_LEGACY_video_with_sonar_display.ipynb  05_SonoptixImage_check.ipynb  05_data_synch.ipynb  05_net_relative_position_analysis-2.ipynb  05_net_relative_position_analysis.ipynb  05_nucleus1000dvl_analysis.ipynb  05_video_with_sonar_display.ipynb  06_full_net_analysis.ipynb  06_image_analysis.ipynb  06_image_analysis_simple.ipynb  06_synchronized_sonar_net_distance_analysis.ipynb  06_video_with_sonar_display.ipynb  07_pipeline_visualization.ipynb  08_net_position_analysis.ipynb  08_net_relative_position_analysis.ipynb  08_nucleus1000dvl_analysis.ipynb  09_navigation_guidance_analysis.ipynb  09_relative_fft_analysis.ipynb  10_synchronized_sonar_net_distance_analysis.ipynb  10_synchronized_sonar_net_distance_analysis_simplified.ipynb  Dockerfile  LICENSE  readme.md  requirements.txt  (+3 more)
docs/: dataset_runs.md  edge_enhancement_basic_mode.txt  edge_enhancement_pipeline.txt  sonar_pipeline_diagram.txt  sonar_pipeline_explanation.md  zero_shot_guide.md
ros_ws/: README_sonar_live.md
ros_ws/src/fft/: CMakeLists.txt  package.xml  readme.md
ros_ws/src/fft/config/: fft.yaml
ros_ws/src/fft/launch/: fft.launch
ros_ws/src/fft/msg/: NetApproximationFFT.msg  NetSquare.msg
ros_ws/src/fft/src/: .gitignore  CMakeLists.txt  README.md  main.cpp
ros_ws/src/fft/src/data_handling/: data_handling.cpp  data_handling.hpp
ros_ws/src/fft/src/fft/: fft.cpp  fft.hpp  grid_detection.cpp  localmaxima.cpp
ros_ws/src/fft/src/shape_fitting/: shape_fitting.cpp  shape_fitting.hpp
ros_ws/src/fft/src/utils/: stopwatch.cc  stopwatch.h  thread_pool.cpp  thread_pool.h
ros_ws/src/relative_pose/: .gitignore  CMakeLists.txt  package.xml  setup.py
ros_ws/src/relative_pose/config/: relative_pose.yaml
ros_ws/src/relative_pose/launch/: play_bag_clean.launch  relative_pose.launch
ros_ws/src/relative_pose/msg/: PlaneApproximation.msg  RelativePose.msg
ros_ws/src/relative_pose/output/: 2024-08-20_13-39-34_relative_pose_fft.csv  2024-08-20_13-40-35_relative_pose_fft.csv  2024-08-20_13-42-51_relative_pose_fft.csv  2024-08-20_13-55-34_relative_pose_fft.csv  2024-08-20_13-57-42_relative_pose_fft.csv  2024-08-20_14-16-05_relative_pose_fft.csv  2024-08-20_14-22-12_relative_pose_fft.csv  2024-08-20_14-24-35_relative_pose_fft.csv  2024-08-20_14-31-29_relative_pose_fft.csv  2024-08-20_14-57-38_relative_pose_fft.csv  2024-08-20_15-00-24_relative_pose_fft.csv  2024-08-20_15-14-40_relative_pose_fft.csv  2024-08-20_16-57-46_relative_pose_fft.csv  2024-08-20_17-08-14_relative_pose_fft.csv  2024-08-20_17-14-36_relative_pose_fft.csv  2024-08-20_17-39-32_relative_pose_fft.csv  2024-08-20_17-40-54_relative_pose_fft.csv  2024-08-20_18-12-20_relative_pose_fft.csv  2024-08-20_18-47-40_relative_pose_fft.csv  2024-08-22_14-06-43_relative_pose_fft.csv  2024-08-22_14-29-05_relative_pose_fft.csv  2024-08-22_14-47-39_relative_pose_fft.csv  fft_callback_runtime.csv
ros_ws/src/relative_pose/scripts/: relative_pose_plotter.py  relative_pose_plotter_with_DVL.py  relative_pose_plotter_with_old_framework.py  relative_pose_plotter_with_old_framework_case_3.py
ros_ws/src/relative_pose/src/: relative_pose_node.py
ros_ws/src/sensors/: CMakeLists.txt  package.xml
ros_ws/src/sensors/msg/: SonoptixECHO.msg
ros_ws/src/solaqua_tools/: CMakeLists.txt  package.xml  setup.py
ros_ws/src/solaqua_tools/scripts/: compute_net_distance.py  sonar_live_net_node.py  sonar_topic_to_npz.py
ros_ws/src/solaqua_tools/utils/: __init__.py  comparison_analysis.py  config.py  dataset_export_utils.py  distance_measurement.py  fft_processing.py  image_enhancement.py  io_utils.py  multi_system_sync.py  net_analysis.py  net_analysis_loader.py  sonar_analysis.py  sonar_visualization.py  video_generation.py
scripts/: compute_net_distance.py  generate_bag_summary.py  interactive_kernel_visualizer.py  solaqua_export.py  test_binary_pipeline.py
simulation/: COMPLETE_SYSTEM_DOCUMENTATION.md  DEVELOPMENT_PLAN.md  HEATMAP_PIPELINE.md  ML_PIPELINE_DOCUMENTATION.md  QUICKSTART.md  README.md  TRAINING_GUIDE.md  bbox_data_generator.py  bbox_from_segmentation.py  bbox_generator_test.py  config.py  data_generator.py  semantic_segmentation.py  simulation.py  test_bbox_world.py  test_direction.py  test_heatmap_targets.py  test_training_system.py  test_trajectory.py  test_visual_samples.py
simulation/bbox/: __init__.py  bbox_from_segmentation.py  dataset.py  generate_dataset.py  train.py
simulation/core/: __init__.py  data_generator.py  semantic_segmentation.py  simulation.py
simulation/models/: __init__.py  baseline.py  bbox_cnn.py  unet.py
simulation/tests/: __init__.py  (+1 more)
utils/: __init__.py  comparison_analysis.py  config.py  contour_analysis.py  core.py  data_export.py  dataset_export_utils.py  distance_measurement.py  enhanced_net_detection.py  fft_video_overlay.py  image_analysis_utils.py  image_enhancement.py  io_utils.py  multi_system_sync.py  navigation_guidance_analysis.py  net_analysis.py  net_distance_analysis.py  net_line_utils.py  net_position_analysis.py  net_relative_utils.py  nucleus1000dvl_analysis.py  ping360_visualization.py  pipeline_visualization.py  relative_fft_analysis.py  rendering.py  reporting.py  sonar_analysis.py  sonar_and_foto_generation.py  sonar_and_foto_generation_fft_patch.py  sonar_config.py  sonar_distance_analysis.py  sonar_image_analysis.py  sonar_image_analysis_backup.py  sonar_processing.py  sonar_tracking.py  sonar_utils.py  sonar_visualization.py  synchronized_analysis.py  verify_sonar_bag_source.py  video_export.py  (+3 more)
(+8 files in other folders)
