<?xml version="1.0"?>
<package format="2">
  <name>relative_pose</name>
  <version>0.0.1</version>
  <description>The relative_pose package</description>

  <maintainer email="eriktfr@stud.ntnu.no">Erik Tjærand Frøland</maintainer>
  <license>MIT</license>

  <!-- Build dependencies -->
  <build_depend>rospy</build_depend>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <!-- <build_depend>tf</build_depend> -->
  <!-- <build_depend>tf_conversions</build_depend> -->
  


  <!-- Execution dependencies -->
  <exec_depend>rospy</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <!-- <exec_depend>tf</exec_depend> -->
  <!-- <exec_depend>tf_conversions</exec_depend> -->

  <!-- Optional dependencies -->
  <!-- <exec_depend>relative_pose</exec_depend> -->

</package>
