<?xml version="1.0"?>
<package format="2">
  <name>sensors</name>
  <version>0.0.1</version>
  <description>Minimal sensors message package providing SonoptixECHO.</description>

  <maintainer email="you@example.com">SOLAQUA</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>

  <exec_depend>message_runtime</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
    <build_type>catkin</build_type>
  </export>
</package>
