<?xml version="1.0"?>
<package format="2">
  <name>solaqua_tools</name>
  <version>0.0.1</version>
  <description>ROS1 wrapper for SOLAQUA analysis tools (compute_net_distance).</description>

  <maintainer email="you@example.com">SOLAQUA</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>python3</exec_depend>

  <build_depend>catkin_python_setup</build_depend>
  <build_export_depend>catkin_python_setup</build_export_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-pandas</exec_depend>
  <exec_depend>python3-opencv</exec_depend>
  <exec_depend>python3-scipy</exec_depend>
  <exec_depend>python3-yaml</exec_depend>
  <exec_depend>python3-matplotlib</exec_depend>

  <export>
    <build_type>catkin</build_type>
  </export>
</package>
